[project]
name = "japanese-blog-agent-adk"
version = "0.1.0"
description = "Multi-agent blog writing system built with Google ADK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "contextkit==0.0.10",
    "google-adk==1.24.1",
    "google-genai==1.62.0",
    "youtube-transcript-api==1.2.4",
    "yt-dlp==2026.2.4",
]

[dependency-groups]
dev = [
    "pytest>=8,<10",
]

[tool.uv]
package = false
